# bath-signal

./: Cargo.toml  README.md
bath-signal/: Cargo.toml
bath-signal-codegen/: Cargo.toml
bath-signal-codegen/src/: main.rs
bath-signal/demo/: bathSignal.ts  index.html  main.ts  tsconfig.json
bath-signal/examples/: axum.rs
bath-signal/src/: check_mailbox.rs  create_call.rs  join_query.rs  lib.rs  mailbox.rs  send_answer.rs  send_ice.rs  send_offer.rs
examples/: axum.rs
sample/: index.html
src/: join_query.rs  leave.rs
