[package]
name = "bath-signal"
version = "0.1.1"
edition = "2021"
description = "A generic WebRTC signalling implementation."
repository = "https://github.com/joinbubbel/bath-signal"
homepage = "https://github.com/joinbubbel/bath-signal"
license = "MIT"
keywords = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
axum = "0.6" 
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
tokio = { version = "1", features = ["rt", "macros"] }
